implement leave room
