# src/room/room.controller.ts
@@ -1,4 +1,13 @@
-import { Body, Controller, Param, Post, Req, UseGuards } from '@nestjs/common';
+import {
+  BadRequestException,
+  Body,
+  Controller,
+  Delete,
+  HttpCode,
+  Param,
+  Post,
+  UseGuards,
+} from '@nestjs/common';
 import { CreateRoomDto } from './dto/room.dto';
 import { CreateRoomService } from './service/create_room.service';
 import { JwtGuard } from '../auth/guard/jwt_guard';
@@ -16,10 +25,31 @@ export class RoomsController {
   }
 
   @Post(':id/users')
-  join(@Param('id') roomId: string, @GetUser() user: AuthUser) {
+  @HttpCode(204)
+  async join(@Param('id') roomId: string, @GetUser() user: AuthUser) {
     const chatUser = this.mapToChatUser(user);
 
-    return this.roomsService.join(roomId, chatUser);
+    try {
+      await this.roomsService.join(roomId, chatUser);
+    } catch (e) {
+      throw new BadRequestException(e.message);
+    }
+
+    return null;
+  }
+
+  @Delete(':id/users')
+  @HttpCode(204)
+  async leave(@Param('id') roomId: string, @GetUser() user: AuthUser) {
+    const chatUser = this.mapToChatUser(user);
+
+    try {
+      await this.roomsService.leave(roomId, chatUser);
+    } catch (e) {
+      throw new BadRequestException(e.message);
+    }
+
+    return null;
   }
 
   private mapToChatUser(user: AuthUser): ChatUser {
